Adjust some h-tag font sizes.... Analytics still has horizontal scroll bar on mobile...To be fix later

--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,7 @@ nav > a:hover {
 }
 
 nav a:last-child {
-  padding-right: 0;
+  /* padding-right: 0; */
 }
 
 .hero-section {
@@ -1080,9 +1080,19 @@ footer #contact-us:hover {
   }
 } */
 
+@media only screen and (max-width: 530px) {
+  /* header nav {
+    justify-content: flex-end;
+  } */
+  .page-heading {
+    font-size: 4rem;
+    margin-top: 2rem;
+    margin-bottom: 0;
+  }
+}
+
 @media only screen and (max-width: 800px) {
   footer .main-info {
-    /* display: ; */
     flex-direction: column;
     flex-grow: 0.8;
     font-size: 2rem;
